# tgtest

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  login.py  main.py  pyproject.toml
.github/workflows/: python-app.yml  release.yml
docs/: README.md  architecture.md  bot-integration.md  buttons-and-keyboards.md  cli.md  configuration.md  example-bot.md  getting-started.md  python-api.md  troubleshooting.md  yaml-scenarios.md
examples/: README.md  __init__.py
examples/bot/: __init__.py  __main__.py  app.py  text.py
examples/tests/e2e/: conftest.py  test_bot_e2e.py
examples/tests/e2e/scenarios/: start.yaml
examples/tests/unit/: test_text.py
scenarios/: example_start.yaml
tests/: conftest.py  test_config.py  test_example.py  test_matchers.py  test_proxy.py  test_scenario.py
tgtest/: __init__.py  cli.py  client.py  config.py  engine.py  exceptions.py  logger.py  matchers.py  proxy.py  pytest_plugin.py  scenario.py
