[project]
name = "tgtest"
version = "0.1.0"
description = "End-to-end testing platform for Telegram bots (Telethon-driven, YAML + pytest)."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "telethon>=1.36,<2.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "pydantic-settings>=2.5",
  "python-socks[asyncio]>=2.4",
]

[project.scripts]
tgtest = "tgtest.cli:main"

[tool.poetry]
packages = [{ include = "tgtest" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.15"
pre-commit = "^4.0"

# Only needed to run the reference bot in examples/ (poetry install --with examples).
[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
aiogram = "^3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["logs", "tests/__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: test talks to a real bot over Telegram (needs an authorized session)",
  "e2e: live end-to-end test in examples/ that drives the running demo bot",
]
