[project]
name = "tgtest"
version = "0.1.0"
description = "End-to-end testing platform for Telegram bots (Telethon-driven, YAML + pytest)."
authors = [{ name = "k0te1ch", email = "khvostov40@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<4.0"
keywords = [
  "telegram",
  "telethon",
  "testing",
  "e2e",
  "pytest",
  "bot",
  "automation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Topic :: Communications :: Chat",
  "Framework :: Pytest",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "telethon>=1.36,<2.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.5",
  "python-socks[asyncio]>=2.4",
]

[project.urls]
Homepage = "https://github.com/k0te1ch/tgtest"
Repository = "https://github.com/k0te1ch/tgtest"
Documentation = "https://github.com/k0te1ch/tgtest/tree/main/docs"
Issues = "https://github.com/k0te1ch/tgtest/issues"
Changelog = "https://github.com/k0te1ch/tgtest/blob/main/CHANGELOG.md"

[project.scripts]
tgtest = "tgtest.cli:main"

[tool.poetry]
packages = [{ include = "tgtest" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.15"
pre-commit = "^4.0"
commitizen = "^4.4"

# Only needed to run the reference bot in examples/ (poetry install --with examples).
[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
aiogram = "^3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["logs", "tests/__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: test talks to a real bot over Telegram (needs an authorized session)",
  "e2e: live end-to-end test in examples/ that drives the running demo bot",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
major_version_zero = true
# Changelog is generated by git-cliff in CI (.github/workflows/release.yml)
# on tag push — keep this disabled to avoid double-writes.
update_changelog_on_bump = false
bump_message = "bump: version $current_version -> $new_version"
